--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,12 +20,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create commits
         run: |
-          git config user.name 'Peter Evans'
-          git config user.email 'peter-evans@users.noreply.github.com'
+          git config user.name 'jmmm25'
+          git config user.email 'jmkim9302@gmail.com'
           date +%s > report.txt
-          git commit -am "Modify tracked file during workflow"
-          date +%s > new-report.txt
-          git add -A
           git commit -m "Add untracked file during workflow"
       
       - name: Create Pull Request
