--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,7 @@ jobs:
           commit-message: Update report
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
-          branch: example-patches
+          branch: example-patches/$(date +'%H:%M:%S')
           delete-branch: true
           title: '[Example] Update report'
           body: |
